# ass

./: .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PLAN.md  PYLINT_REPORT.md  README.md  VOTING-FEATURE.md  config.py  debate_app.py  debate_engine.py  demo.py  main.py  personality.py  pyproject.toml  sample_config.json  test_interactive.md  voting.py  voting_demo.py  web_server.py
debates/: .gitkeep
models/: __init__.py  arguments.py  debate.py  personality.py  voting.py
personalities/: __init__.py  base.py  claude.py  factory.py  local.py  openai.py
services/: __init__.py  debate_manager.py  file_manager.py
static/: index.html
ui/: __init__.py  prompts.py  rich_formatter.py
