[project]
name = "ass"
version = "0.1.0"
description = "ASS - Argumentative System Service: Watch AI personalities debate any topic"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.54.0",
    "openai>=1.86.0",
    "google-generativeai>=0.3.2",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
]
